[build scripts] IJPL-189601 enabling native access in distributions and CI tests on Java 25+
GitOrigin-RevId: 83b8ecd2424f6342cfda6abaf34dee1d4eff5756